--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </div>
           </div>
         <div class="home-image">
-            <img src="images\IMG-20240104-WA0045.jpg" alt="Image Description">
+            <img src="IMG-20240104-WA0045.jpg" alt="Image Description">
          </div>
      </div>
      <!-- Sign up Begins -->
